v0.6.4 (2011-??-??)
  * Various performance improvements (15% ~ 25%) especially when dealing with 
    long multibulk replies or when using clustered connections.

  * Added the "on_retry" option to Predis\MultiExecBlock that can be used to 
    specify an external callback (or any callable object) that gets invoked 
    whenever a transaction is aborted by the server.

v0.6.3 (2011-01-01)
  * New commands available in the Redis v2.2 profile (dev):
      - Strings: SETRANGE, GETRANGE, SETBIT, GETBIT
      - Lists  : BRPOPLPUSH

  * The abstraction for MULTI/EXEC transactions has been dramatically improved 
    by providing support for check-and-set (CAS) operations when using Redis >= 
    2.2. Aborted transactions can also be optionally replayed in automatic up 
    to a user-defined number of times, after which a Predis\AbortedMultiExec 
    exception is thrown.

v0.6.2 (2010-11-28)
  * Minor internal improvements and clean ups.

  * New commands available in the Redis v2.2 profile (dev):
      - Strings: STRLEN
      - Lists  : LINSERT, RPUSHX, LPUSHX
      - ZSets  : ZREVRANGEBYSCORE
      - Misc.  : PERSIST

  * WATCH also accepts a single array parameter with the keys that should be 
    monitored during a transaction.

  * Improved the behaviour of Predis\MultiExecBlock in certain corner cases.

  * Improved parameters checking for the SORT command.

  * FIX: the STORE parameter for the SORT command didn't work correctly when 
    using '0' as the target key (ISSUE #13).

  * FIX: the methods for UNWATCH and DISCARD do not break anymore method 
    chaining with Predis\MultiExecBlock.

v0.6.1 (2010-07-11)
  * Minor internal improvements and clean ups.

  * New commands available in the Redis v2.2 profile (dev):
      - Misc.  : WATCH, UNWATCH

  * Optional modifiers for ZRANGE, ZREVRANGE and ZRANGEBYSCORE queries are 
    supported using an associative array passed as the last argument of their 
    respective methods.
